--- a/luckynumber.css
+++ b/luckynumber.css
@@ -100,12 +100,12 @@ body {
 }
 @media only screen and (max-width: 600px) {
     #myBtn{
-    width: 60%;
+    width: 80%;
     margin-left: 45%;
     height: 20vh;
     }
     #myBtnPs{
-    width: 60%;
+    width: 80%;
     margin-left: 45%;
     height: 20vh;
     }
@@ -118,6 +118,10 @@ body {
     }
     #button{
     margin-top: 30px;
-        
+    }
+    .img img{
+    height: 30vh;
+    width: 60%;
+    margin: 5% 15%;
     }
 }
